# backpropagate_lessons

./: .gitignore  README.md  pyproject.toml
dynamic_programming/fibonacci/: bottom_up_tabulation.py  naive.py  top_down_memoization.py
dynamic_programming/knapsack_problem/: bottom_up_tabulation.py  top_down_memoization.py
dynamic_programming/longest_common_sequence/: bottom_up_tabulation.py  top_down_memoization.py
evolutionary_algorithms/genetic_algorithm/: main.py
sanity_check_reviews/coconut/: evaluate.py  models.py  prepare_data.py  requirements.txt  train.py
sanity_check_reviews/seal/: README.md  few_shot_learning.py  knowledge_incorporation.py  requirements.txt
search_algorithms/: README.md
search_algorithms/markov_decision_processes/: main.py
search_algorithms/minmax/: main.py  move_node.py  utils.py
search_algorithms/monte_carlo_tree_search/: main.py  nodes.py  solvers.py  states.py
