[tool.poetry]
name = "backpropagate-lessons"
version = "0.1.0"
description = ""
authors = ["Milos Ojdanic"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
graphviz = "^0.20.3"
matplotlib = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
